[package]
name = "basics"
version = "0.4.0"
authors = ["Matthew Scheffel <matt@dataheck.com>", "Foorack <max@foorack.com>"]
edition = "2021"
license = "MIT"

[dependencies]
gloo-console = "0.3.0"
yew = { version = "0.22", features = ["csr"] }
yew-bootstrap = { path = "../../packages/yew-bootstrap" }
wasm-bindgen = "0.2.*"
web-sys = { version = "0.3.*", features = ["Event", "HtmlElement"] }
