[package]
name = "forms"
version = "0.2.0"
authors = ["Cédric Airaud <cairaud@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.*"
web-sys = { version = "0.3.*", features = ["HtmlTextAreaElement", "HtmlSelectElement"] }
yew = { version = "0.21", features = ["csr"] }
yew-bootstrap = { path = "../../packages/yew-bootstrap" }
gloo-console = "0.3.0"
