[package]
name = "searchable_select"
version = "0.0.1"
authors = ["Cédric Airaud <cairaud@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
wasm-bindgen = "0.2.*"
yew = { version = "0.21", features = ["csr"] }
yew-bootstrap = { path = "../../packages/yew-bootstrap", features=["searchable_select"] }
gloo-console = "0.3.*"
